--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+	"@material-ui/core":"^4.12.3",
+	"moment": "^2.24.0"
   },
   "scripts": {
     "start": "react-scripts start",
